--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -110,12 +110,9 @@ form {
 }
 
 input {
-  border-radius: 4px;
-  border: 1px solid #000;
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-  margin-top: 0.25rem;
-  padding: 0.5rem;
+  margin: 0;
+  padding: 0;
+  font: inherit;
 }
 
 legend {
